feat: change reset password logic & add code verification
