# src/routes/auth.route.ts
@@ -1,6 +1,6 @@
 import { RequestHandler, Router } from "express";
 import authController from "../controllers/auth.controller";
-import { InitiateResetPasswordDTO, LoginDTO, ResetPasswordDTO } from "../dtos/auth.dto";
+import { InitiateResetPasswordDTO, LoginDTO, ResetPasswordDTO, VerifyCodeDTO } from "../dtos/auth.dto";
 import { checkLoggedIn } from "../middlewares/auth.middleware";
 import { validationMiddleware } from "../middlewares/validator.middleware";
 
@@ -11,5 +11,6 @@ authRouter.patch("/initiate-reset-password", [validationMiddleware(InitiateReset
 authRouter.patch("/reset-password", [validationMiddleware(ResetPasswordDTO)], authController.resetPassword)
 authRouter.patch("/initiate-email-verification", [checkLoggedIn], authController.initiateEmailVerification)
 authRouter.patch("/verify-email/:code", [checkLoggedIn], authController.verifyEmail)
+authRouter.patch("/verify-code", [validationMiddleware(VerifyCodeDTO)], authController.verifyCode)
 
 export default authRouter
